--- a/app/views/shared/documents/_table.html.erb
+++ b/app/views/shared/documents/_table.html.erb
@@ -20,5 +20,6 @@
       </tr>
       <%= render partial: "#{namespace}/documents/document", collection: @documents %>
     </tbody>
+    # </tbody>
   </table>
 </div>
